Fix 'load more' button showing logic: #23 visible since from the beginning, keep visibility between renders

--- a/css/panel.css
+++ b/css/panel.css
@@ -14,6 +14,10 @@ body {
     word-break: break-all;
 }
 
+.hidden {
+    display: none;
+}
+
 .btn-link {
     padding: 0;
 }
@@ -85,7 +89,6 @@ body {
 
 .more {
     text-align: center;
-    display: none;
 }
 
 .appComponentList {
